Fix youtube video on mobile

--- a/wp-content/themes/fount-child/assets/css/frm.css
+++ b/wp-content/themes/fount-child/assets/css/frm.css
@@ -139,6 +139,12 @@ p.special-pricing span.yellow-circle {
 	position: relative;
 }
 
+@media screen and (max-width: 1000px) {
+	.hero.hero-slide .row_pattern_overlay {
+		display: none;
+	}
+}
+
 .video-background {
   background: #000;
   position: absolute;
@@ -172,6 +178,7 @@ p.special-pricing span.yellow-circle {
 	left:0;
 	width:100%;
 	height:100%;
+	z-index: 10;
 }
 
 .hero-slide {
@@ -190,6 +197,7 @@ p.special-pricing span.yellow-circle {
 
 .wpb_wrapper {
 	position: relative;
+	text-align: center;
 	z-index: 3;
 }
 
